apps/rust/fsw/error.log
   Compiling cfs_rs v0.1.0 (file:///home/noah/Documents/cfs_rs)
   Compiling cfsapp-rs v0.1.0 (file:///home/noah/Documents/cFE/apps/rust/fsw)
warning: unused import: `std::mem::transmute`
 --> /home/noah/Documents/cfs_rs/src/lib.rs:6:5
  |
6 | use std::mem::transmute;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: #[warn(unused_imports)] on by default

warning: unused macro definition
  --> /home/noah/Documents/cfs_rs/src/lib.rs:14:1
   |
14 | / macro_rules! cfs_str {
15 | |     ($str:expr) => {
16 | |         CString::new($str).unwrap().as_ptr()
17 | |     }
18 | | }
   | |_^
   |
   = note: #[warn(unused_macros)] on by default

warning: use of deprecated item 'std::thread::sleep_ms': replaced by `std::thread::sleep`
  --> /home/noah/Documents/cfs_rs/src/lib.rs:43:13
   |
43 |             thread::sleep_ms(1000);
   |             ^^^^^^^^^^^^^^^^
   |
   = note: #[warn(deprecated)] on by default

warning: variable `status` is assigned to, but never used
  --> /home/noah/Documents/cfs_rs/src/lib.rs:24:13
   |
24 |     let mut status = 0;
   |             ^^^^^^
   |
   = note: #[warn(unused_variables)] on by default
   = note: consider using `_status` instead

warning: value assigned to `status` is never read
  --> /home/noah/Documents/cfs_rs/src/lib.rs:30:9
   |
30 |         status = CFE_ES_RegisterApp();
   |         ^^^^^^
   |
   = note: #[warn(unused_assignments)] on by default

error[E0432]: unresolved import
 --> src/lib.rs:9:5
  |
9 | use cfs_rs::*;
  |     ^^^^^^^^^

error[E0412]: cannot find type `uint32` in this scope
  --> src/lib.rs:19:26
   |
19 |     let mut run_status : uint32 = CFE_ES_RUNSTATUS_APP_RUN;
   |                          ^^^^^^ not found in this scope

error[E0425]: cannot find value `CFE_ES_RUNSTATUS_APP_RUN` in this scope
  --> src/lib.rs:19:35
   |
19 |     let mut run_status : uint32 = CFE_ES_RUNSTATUS_APP_RUN;
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `CFE_ES_RegisterApp` in this scope
  --> src/lib.rs:27:18
   |
27 |         status = CFE_ES_RegisterApp();
   |                  ^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `CFE_ES_GetAppID` in this scope
  --> src/lib.rs:29:9
   |
29 |         CFE_ES_GetAppID(&mut app_id);
   |         ^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `CFE_ES_WriteToSysLog` in this scope
  --> src/lib.rs:31:9
   |
31 |         CFE_ES_WriteToSysLog(CString::new("Rust App running as %d!\n").unwrap().as_ptr(), app_id);
   |         ^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `CFE_ES_RUNSTATUS_APP_RUN` in this scope
  --> src/lib.rs:35:25
   |
35 |     while run_status == CFE_ES_RUNSTATUS_APP_RUN {
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `CFE_ES_RunLoop` in this scope
  --> src/lib.rs:43:26
   |
43 |             run_status = CFE_ES_RunLoop(&mut run_status) as uint32;
   |                          ^^^^^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `uint32` in this scope
  --> src/lib.rs:43:61
   |
43 |             run_status = CFE_ES_RunLoop(&mut run_status) as uint32;
   |                                                             ^^^^^^ not found in this scope

error[E0425]: cannot find function `CFE_ES_ExitApp` in this scope
  --> src/lib.rs:50:9
   |
50 |         CFE_ES_ExitApp(run_status);
   |         ^^^^^^^^^^^^^^ not found in this scope

warning: unused import: `cfs_rs::*`
 --> src/lib.rs:9:5
  |
9 | use cfs_rs::*;
  |     ^^^^^^^^^
  |
  = note: #[warn(unused_imports)] on by default

warning: unused import: `cfs_rs::bindings::*`
  --> src/lib.rs:10:5
   |
10 | use cfs_rs::bindings::*;
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to 10 previous errors

Some errors occurred: E0412, E0425, E0432.
For more information about an error, try `rustc --explain E0412`.
error: Could not compile `cfsapp-rs`.

To learn more, run the command again with --verbose.
